--- a/webapp/backend/package.json
+++ b/webapp/backend/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "natural": "^6.10.4",
+    "nltk": "^0.0.1"
   },
   "name": "backend",
   "version": "1.0.0",
