--- a/.github/workflows/nfrd-31-web_nfrd-web.yml
+++ b/.github/workflows/nfrd-31-web_nfrd-web.yml
@@ -21,20 +21,38 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install, build, and test for backend
         run: |
+          cd NFRD/webapp/backend
           npm install
           npm run build --if-present
           npm run test --if-present
+        
+      - name: npm install, build, and test for frontend
+        run: |
+          cd NFRD/webapp/frontend
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+          
+      - name: Zip backend artifact for deployment
+        run: zip backend-release.zip NFRD/webapp/backend/* -r
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: Zip frontend artifact for deployment
+        run: zip frontend-release.zip NFRD/webapp/frontend/* -r
 
-      - name: Upload artifact for deployment job
+      - name: Upload backend artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
-          name: node-app
-          path: release.zip
+          name: backend-app
+          path: backend-release.zip
+
+      - name: Upload frontend artifact for deployment job
+        uses: actions/upload-artifact@v3
+        with:
+          name: frontend-app
+          path: frontend-release.zip
+
 
   deploy:
     runs-on: ubuntu-latest
@@ -46,13 +64,22 @@ jobs:
       id-token: write #This is required for requesting the JWT
 
     steps:
-      - name: Download artifact from build job
+      - name: Download backend artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: node-app
+          name: backend-app
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
+      - name: Download frontend artifact from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: frontend-app
+
+      - name: Unzip backend artifact for deployment
+        run: unzip backend-release.zip
+
+      - name: Unzip frontend artifact for deployment
+        run: unzip frontend-release.zip
+
       
       - name: Login to Azure
         uses: azure/login@v1
@@ -61,11 +88,18 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_EE1EB3B26F2A4B77A464F92405578448 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B30A000E35934D30B33AB761CB10A7B2 }}
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+      - name: 'Deploy backend to Azure Web App'
+        id: deploy-backend-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'NFRD-Web'
           slot-name: 'Production'
-          package: .
-          
+          package: NFRD/webapp/backend
+
+      - name: 'Deploy frontend to Azure Web App'
+        id: deploy-frontend-to-webapp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'NFRD-Web'
+          slot-name: 'Production'
+          package: NFRD/webapp/frontend
