--- a/.github/workflows/nfrd-31-web_nfrd-web.yml
+++ b/.github/workflows/nfrd-31-web_nfrd-web.yml
@@ -21,19 +21,17 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test for backend
+      - name: npm install, and build for backend
         run: |
           cd webapp/backend
           npm install
           npm run build --if-present
-          npm run test --if-present
         
-      - name: npm install, build, and test for frontend
+      - name: npm install, and build for frontend
         run: |
           cd webapp/frontend
           npm install
           npm run build --if-present
-          npm run test --if-present
           
       - name: Zip backend artifact for deployment
         run: zip backend-release.zip webapp/backend/* -r
