--- a/.github/workflows/nfrd-31-web_nfrd-web.yml
+++ b/.github/workflows/nfrd-31-web_nfrd-web.yml
@@ -20,30 +20,15 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-
-      - name: npm install, and build for backend
-        run: |
-          cd webapp/backend
-          npm install
-          npm run build --if-present
         
       - name: npm install, and build for frontend
         run: |
           cd webapp/frontend
           npm install
           npm run build --if-present
-          
-      - name: Zip backend artifact for deployment
-        run: zip backend-release.zip webapp/backend/* -r
 
       - name: Zip frontend artifact for deployment
         run: zip frontend-release.zip webapp/frontend/* -r
-
-      - name: Upload backend artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
-          name: backend-app
-          path: backend-release.zip
 
       - name: Upload frontend artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -54,7 +39,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-and-deploy
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
@@ -62,18 +47,10 @@ jobs:
       id-token: write #This is required for requesting the JWT
 
     steps:
-      - name: Download backend artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: backend-app
-
       - name: Download frontend artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: frontend-app
-
-      - name: Unzip backend artifact for deployment
-        run: unzip backend-release.zip
 
       - name: Unzip frontend artifact for deployment
         run: unzip frontend-release.zip
@@ -85,15 +62,6 @@ jobs:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_531933A0E8C848569241A871B0289823 }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_EE1EB3B26F2A4B77A464F92405578448 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_B30A000E35934D30B33AB761CB10A7B2 }}
-
-      - name: 'Deploy backend to Azure Web App'
-        id: deploy-backend-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'NFRD-Web'
-          slot-name: 'Production'
-          package: webapp/backend
-
 
       - name: 'Deploy frontend to Azure Web App'
         id: deploy-frontend-to-webapp
