--- a/.github/workflows/nfrd-31-web_nfrd-web.yml
+++ b/.github/workflows/nfrd-31-web_nfrd-web.yml
@@ -39,7 +39,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-deploy
+    needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
