--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,23 @@
-# Node.js
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Dependency directories
-**/node_modules/
-**/bower_components/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# IDEs and editors
-.vscode/
-.idea/
-*.code-workspace
+# testing
+/coverage
 
-# Logs and crash reports
-*.log
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
-
-# Output of npm commands
-node_modules/
-
-# Yarn
-yarn-error.log
-
-# React specific
-build/
-dist/
-/.pnp/
-.pnp.js
-coverage/
-*.log
-*.swp
